# pneumonia_classification_xception_model

./: .gitignore  README.md  fetch_data_from_kaggle.sh  pyproject.toml
pneumonia_model_api/app/: __init__.py  controller.py  main.py  validation.py
pneumonia_model_package/: tox.ini
pneumonia_model_package/pneumonia_model_package/: model.py  predict.py
pneumonia_model_package/pneumonia_model_package/data_processing/: data_manager.py
pneumonia_model_package/tests/: conftest.py  test_predict.py
research/: pneumonia_discovery_xception_model.ipynb
