[tool.poetry]
name = "pneumonia-classification-xception-model-api"
version = "0.1.0"
description = "The application programming interface for our chest health status"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
loguru = "^0.7.2"
pneumonia-model-package = "0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
